tooling/nargo_cli/tests/snapshots/execution_success/regression_4202/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [u32; 4]):
    (no terminator instruction)
}
